# pit

./: .gitignore  AGENTS.md  Cargo.toml  README.md
docs/: architecture.md  decisions.md  quality.md
site/: index.html
src/: main.rs
src/core/: checkpoint.rs  config.rs  git_info.rs  github.rs  issues.rs  linear.rs  mod.rs  names.rs  project.rs  reap.rs  task.rs  tmux.rs
src/db/: migrations.rs  mod.rs
src/tui/: app.rs  mod.rs  ui.rs
tests/: cli.rs
