[package]
name = "pit"
version = "0.2.1"
edition = "2021"
description = "Run multiple coding agents in parallel with git worktree isolation"
license = "MIT"
repository = "https://github.com/iaptsiauri/pit"
homepage = "https://github.com/iaptsiauri/pit"
readme = "README.md"
keywords = ["cli", "tui", "coding-agent", "tmux", "git"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
uuid = { version = "1", features = ["v4"] }
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
